--- a/app/views/xml.scala.html
+++ b/app/views/xml.scala.html
@@ -2,5 +2,5 @@
 // Generated the @{new Date().format("yyyy")}
 
 @for(property <- properties) {
-"@property.key" = "@property.values.get(lang_index).value";
+"@property.akey" = "@property.values.get(lang_index).value";
 }
