--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -46,6 +46,25 @@
     						</li>
               </ul>
             </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <i class="icon-download"></i> Export only validated<b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-submenu">
+    							<a tabindex="-1" href="#">XML</a>
+    							<ul class="dropdown-menu">
+              			<li ng-repeat="langage in conf.langages"><a href="/downvalid/{{conf.locals[$index]}}/XML">{{langage}}</a></li>
+    							</ul>
+    						</li>
+                <li class="dropdown-submenu">
+    							<a tabindex="-1" href="#">Properties</a>
+    							<ul class="dropdown-menu">
+              			<li ng-repeat="langage in conf.langages"><a href="/downvalid/{{conf.locals[$index]}}/strings">{{langage}}</a></li>
+    							</ul>
+    						</li>
+              </ul>
+            </li>
             <!-- <li class="divider-vertical"></li> -->
             <li>
             	<a ng-click="importProperties()">
